--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-navigation/native-stack": "^6.11.0",
     "@shopify/react-native-skia": "1.2.3",
     "@types/react": "~18.2.79",
+    "babel-polyfill": "^6.26.0",
     "expo": "~51.0.28",
     "expo-image-picker": "~15.0.7",
     "expo-linear-gradient": "~13.0.2",
