--- a/package.json
+++ b/package.json
@@ -10,10 +10,13 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.2",
+    "@react-native-async-storage/async-storage": "^2.0.0",
     "@react-native-picker/picker": "^2.8.0",
     "@react-navigation/bottom-tabs": "^6.6.1",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/native-stack": "^6.11.0",
+    "@segment/analytics-react-native": "^2.20.0-beta.1",
+    "@segment/sovran-react-native": "^1.1.2",
     "@shopify/react-native-skia": "1.2.3",
     "@types/react": "~18.2.79",
     "babel-polyfill": "^6.26.0",
@@ -27,6 +30,7 @@
     "react-native": "0.74.5",
     "react-native-chart-kit": "^6.12.0",
     "react-native-gesture-handler": "~2.16.1",
+    "react-native-get-random-values": "^1.11.0",
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
