--- a/package.json
+++ b/package.json
@@ -20,15 +20,19 @@
     "@shopify/react-native-skia": "1.2.3",
     "@types/react": "~18.2.79",
     "babel-polyfill": "^6.26.0",
+    "eas-cli": "^12.4.1",
     "expo": "~51.0.28",
     "expo-checkbox": "~3.0.0",
+    "expo-cli": "^6.3.10",
     "expo-image-picker": "~15.0.7",
     "expo-linear-gradient": "~13.0.2",
     "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
     "react-hook-form": "^7.53.0",
     "react-native": "0.74.5",
+    "react-native-animatable": "^1.4.0",
     "react-native-chart-kit": "^6.12.0",
+    "react-native-confetti-cannon": "^1.5.2",
     "react-native-gesture-handler": "~2.16.1",
     "react-native-get-random-values": "^1.11.0",
     "react-native-reanimated": "~3.10.1",
