--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "start": "expo start",
     "android": "expo run:android",
     "ios": "expo run:ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "test": "jest"
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.2",
@@ -16,6 +17,9 @@
     "@segment/analytics-react-native": "^2.20.0-beta.1",
     "@segment/sovran-react-native": "^1.1.2",
     "@shopify/react-native-skia": "1.2.3",
+    "@testing-library/jest-dom": "^6.5.0",
+    "@testing-library/jest-native": "^5.4.3",
+    "@testing-library/react-native": "^12.7.2",
     "@types/react": "~18.2.79",
     "babel-polyfill": "^6.26.0",
     "eas-cli": "^12.4.1",
@@ -24,6 +28,7 @@
     "expo-image-picker": "~15.0.7",
     "expo-linear-gradient": "~13.0.2",
     "expo-status-bar": "~1.12.1",
+    "jest": "^29.7.0",
     "react": "18.2.0",
     "react-hook-form": "^7.53.0",
     "react-native": "0.74.5",
@@ -39,7 +44,12 @@
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
-    "@types/react-native": "^0.73.0"
+    "@types/react-native": "^0.73.0",
+    "jest-expo": "^51.0.4"
+  },
+  "jest": {
+    "preset": "jest-expo",
+    "setupFilesAfterEnv": ["@testing-library/jest-native/extend-expect"]
   },
   "private": true
 }
